# crabos

./: .gitignore  Cargo.toml  Makefile  README.md  generate_initrd.py  rustfmt.toml  x86_64-unknown-crabos.json
.cargo/: config.toml
crabstd/: Cargo.toml
crabstd/src/: cursor.rs  lib.rs  mutex.rs  syscall.rs  (+1 more)
docs/: Boot.md  MemoryMap.md
kernel/: Cargo.toml  layout.ld
kernel/.cargo/: config.toml
kernel/src/: gdt.rs  lib.rs  logger.rs  serial.rs
kernel/src/arch/x86_64/: layout.ld
kernel/src/arch/x86_64/asm/: boot.asm  long_mode_init.asm  paging.asm
kernel/src/arch/x86_64/boot/grub/: grub.cfg
kernel/src/interrupts/: mod.rs  pic.rs  syscall.rs
kernel/src/io/: framebuffer.rs  mod.rs  serial.rs  textbuffer.rs
kernel/src/memory/: area_frame_allocator.rs  heap_allocator.rs  map.rs  mod.rs
kernel/src/memory/frame_allocator/: bitmap.rs  bump.rs  mod.rs
kernel/src/memory/paging/: entry.rs  mapper.rs  mod.rs  table.rs  temporary_page.rs
kernel_loader/: Cargo.toml
kernel_loader/src/: elf.rs  lib.rs
kernel_loader/src/arch/x86_64/: layout.ld
kernel_loader/src/arch/x86_64/asm/: boot.asm  checks.asm  long_mode_init.asm  paging.asm
kernel_loader/src/arch/x86_64/boot/grub/: grub.cfg
kernel_shared/: Cargo.toml
kernel_shared/src/: lib.rs  logger.rs  port.rs  serial.rs  serial_port.rs
kernel_shared/src/memory/: mod.rs
kernel_shared/src/memory/frame_alloc/: bitmap.rs  bump.rs  mod.rs  tiny.rs
kernel_shared/src/memory/paging/: active_table.rs  entry.rs  inactive_table.rs  mapper.rs  mod.rs  table.rs
multiboot/: Cargo.toml
x86_64/: Cargo.toml
(+35 files in other folders)
