[package]
name = "crabos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
kernel_shared = { path = "../kernel_shared" }
crabstd = { path = "../crabstd" }
multiboot = { path = "../multiboot" }
x86_64 = { path = "../x86_64" }
initrd = { path = "../drivers/fs/initrd" }
ram = { path = "../drivers/storage/ram" }
bitflags = "2.5.0"
bit_field = "0.10.2"
log = "0.4.21"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.noto-sans-mono-bitmap]
git = "https://github.com/phip1611/noto-sans-mono-bitmap-rs.git"
branch = "dev"
default-features = false
features = ["size_20", "regular", "unicode_ranges_default"]
