[package]
name = "kernel_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
crabstd = { path = "../crabstd", default-features = false }
x86_64 = { path = "../x86_64" }
multiboot = { path = "../multiboot" }
bitflags = "2.5.0"
log = "0.4.21"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
